Novo calculo - gás de cozinha

--- a/front-end/calculo_carbono.html
+++ b/front-end/calculo_carbono.html
@@ -268,6 +268,7 @@ function limparGas() {
       <button onclick="window.location.href='index.html'">Voltar à Página Inicial</button>
     </div>
 
+    <!-- Tem que centralizar -->
     <div class= "button-excluir">
       <button onclick="//adicinar a função">Excluir Dados</button>
     </div>
