--- a/front-end/calculo_carbono.html
+++ b/front-end/calculo_carbono.html
@@ -153,9 +153,10 @@ function limparGas() {
   document.getElementById("resultado-gas-mensal").textContent = '';
   document.getElementById("resultado-gas-anual").textContent = '';
 }
-
-
 </script>
+
+
+<script>
 
   function calcularGas() {
   const tipoGas = document.getElementById("tipo-gas").value;
