Incrementação do Favicon.
- Foi adicionado o favicon (não consigo ver o resultado, pois não renderiza)

--- a/front-end/calculo_carbono.html
+++ b/front-end/calculo_carbono.html
@@ -6,6 +6,8 @@
   <title>Cálculo de Carbono</title>
   <link rel="stylesheet" href="style/pagsegundaria.css">
   <script src="js(s)/calculo.js"></script>
+  <!-- Favicon, Não consegui ver o resultado, pois não está renderizando o favicon -->
+  <link  rel="icon" type="image/png" sizes="45x45" href="assets/favicon_d.png">
 </head>
 <body>
   <header>
