--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,6 +6,8 @@
   <title>Créditos de Carbono</title>
   <link rel="stylesheet" href="style/style.css">
   <script src="js(s)/interacao.js"></script>
+  <!-- Favicon, Não consegui ver o resultado, pois não está renderizando o favicon -->
+  <link    rel="icon" type="image/png" sizes="32x32" href="assets/favicon_d.png">
 </head>
 <body>
   <header>
