Ajuste de diretórios

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Créditos de Carbono</title>
   <link rel="stylesheet" href="style/style.css">
-  <script src="js(s)/interacao.js"></script>
+  <script src="js/interacao.js"></script>
   <!-- Favicon, Não consegui ver o resultado, pois não está renderizando o favicon -->
   <link    rel="icon" type="image/png" sizes="32x32" href="assets/favicon_d.png">
 </head>
@@ -109,6 +109,6 @@
     <p> © Aps - Unip - 2024 </p>
   </footer>
 
-  <script src="js(s)/redirecao.js"></script>
+  <script src="js/redirecao.js"></script>
 </body>
 </html>
