--- a/front-end/calculo_carbono.html
+++ b/front-end/calculo_carbono.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cálculo de Carbono</title>
   <link rel="stylesheet" href="style/pagsegundaria.css">
-  <script src="js(s)/calculo.js"></script>
+  <script src="js/calculo.js"></script>
   <!-- Favicon, Não consegui ver o resultado, pois não está renderizando o favicon -->
   <link  rel="icon" type="image/png" sizes="45x45" href="assets/favicon_d.png">
 </head>
