Finalização da front-page
- Adição de textos
- adição de imagem e remoção de outras
- Refatoração do css
- Adição de funcionalidades
- Adição de outro favicon
- Refatoração do html

obs:
- O js redireção não é mais necessário
- não conseguir acrescentar responsividade no site (acredito que vou precisar de ajuda nisso) ou se achar que consegue não tem problema.

--- a/front-end/calculo_carbono.html
+++ b/front-end/calculo_carbono.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style/pagsegundaria.css">
   <script src="js/calculo.js"></script>
   <!-- Favicon, Não consegui ver o resultado, pois não está renderizando o favicon -->
-  <link  rel="icon" type="image/png" sizes="45x45" href="assets/favicon_d.png">
+  <link  rel="icon" type="image/png" sizes="45x45" href="assets/favicon.png">
 </head>
 <body>
   <header>
