--- a/front-end/index.html
+++ b/front-end/index.html
@@ -9,15 +9,16 @@
   <link    rel="icon" type="image/png" sizes="50x50" href="assets\favicon.png">
 </head>
 <body>
-
+  
+  <!-- Cabeçalho com barra de navegação -->
   <header>
     <div class="navbar">
-
+      <!-- Logo e título do site -->
       <div class="icone-texto">
         <img src="assets\favicon.png" alt="" class="imagem-navbar">
         <a href="index.html" class="titulo-nav">Créditos de Carbono</a>
       </div>
-
+      <!-- Menu de navegação -->
       <nav>
         <ul>
           <li><a href="#co2">Dióxido de Carbono</a></li>
@@ -28,15 +29,16 @@
       </nav>
     </div>
   </header>
-
+  
+  <!-- Seção principal com introdução ao tema -->
   <section  class="hero">
     <div >
       <h2>Reduzindo a Pegada de Carbono</h2>
       <p>Descubra como os créditos de carbono podem ajudar na preservação ambiental <br> e no desenvolvimento sustentável.</p>
-      <a href="#sobre" class="btn">Saiba Mais</a>
     </div>
   </section>
-
+  
+  <!-- Seção explicativa sobre o dióxido de carbono -->
   <section id="co2" class="texto-explicacao co2">
     <div class="titulo-explicacao">
       <h2>Dióxido de Carbono (CO₂)</h2>
@@ -52,6 +54,7 @@
 
   </section>
   
+  <!-- Seção sobre créditos de carbono com imagem -->
   <section id="Crédito-de-carbono" class="texto-com-imagem" >
     <div id="animacao-texto" class="text">
 
@@ -68,6 +71,7 @@
     
   </section>
 
+  <!-- Seção com benefícios dos créditos de carbono usando cartões -->
   <section id="beneficios" class="container cards">
     <div class="card">
       <h3>Redução de Emissões</h3>
@@ -79,6 +83,7 @@
     </div>
   </section>
 
+  <!-- Seção sobre o funcionamento dos créditos de carbono -->
   <section class="texto-com-imagem" >
     <div id="animacao-texto" class="text">
       <h2>Como funcionam  Créditos de Carbono?</h2>
@@ -91,6 +96,7 @@
     
   </section>
 
+  <!-- Seção sobre o surgimento dos créditos de carbono, com uma lista explicativa -->
   <section id="destaque" class="texto-explicacao cc">
     <h2 class="titulo-texto">Surgimento do Crédito de Carbono</h2>
     <div class="lista-surgimento">
@@ -114,6 +120,7 @@
     </div>
  </section>
 
+  <!-- Seção de introdução para a calculadora de carbono com botão de acesso -->
  <section id ="calc" class="pre-calculadora">
   <div id="calculadora">
     <h1>Sua Contribuição para um Planeta Sustentável</h1>
@@ -122,24 +129,11 @@
   </div>
 
  </section>
-  
- <!-- Estou pensando em remover -->
-  <section id="faq" class="container">
-    <h2>Perguntas Frequentes</h2>
-    <details>
-      <summary>Como os créditos de carbono funcionam?</summary>
-      <p>Os créditos de carbono permitem que empresas...</p>
-    </details>
-    <details>
-        <summary>mfpfmsdofs</summary>
-        <p>dfmsofmds</p>
-    </details>
-  </section>
 
+  <!-- Rodapé do site -->
   <footer>
     <p> © Aps - Unip - 2024 </p>
   </footer>
 
-  <script src="js/redirecao.js"></script>
 </body>
 </html>
